--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 
+  <script type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+(function(){
+  const key = process.env.EMAILJS_PUBLIC_KEY;
+emailjs.init({
+  publicKey: key,
+});
+})();
+</script>
+
 </body>
 
 </html>
