Added public key back to index.html file

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 </script>
 <script type="text/javascript">
 (function(){
-  const key = process.env.EMAILJS_PUBLIC_KEY;
 emailjs.init({
-  publicKey: key,
+  publicKey: 'cRl6WRHTN46Df-KXA',
 });
 })();
 </script>
