--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script src="https://kit.fontawesome.com/8a899e669a.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
